--- a/datatables.html
+++ b/datatables.html
@@ -1,15 +1,16 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.25/css/dataTables.bootstrap5.min.css">
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.min.js"></script>
-    <title></title>
+    <script src="https://cdn.datatables.net/1.10.25/js/dataTables.bootstrap5.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.25/css/dataTables.bootstrap5.min.css">
+    <title>Lojas Farmácias Unipreço</title>
 </head>
 
 <body>
-    <table id="example" class="table table-striped">
+    <table id="example" class="table table-striped" style="width:100%">
         <thead>
             <tr>
                 <th>Loja</th>
@@ -349,8 +350,8 @@
         $(document).ready(function () {
             $('#example').DataTable({
                 "lengthMenu": [
-                    [10, 100, -1],
-                    [10, 100, "Todas"]
+                    [25, 50, 100, -1],
+                    [25, 50, 100, "Todas"]
                 ]
             });
         });
