--- a/listaderamais.html
+++ b/listaderamais.html
@@ -123,11 +123,6 @@
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td>Carlos</td>
-                                        <td>Gerente de Novos Negócios</td>
-                                        <td></td>
-                                    </tr>
-                                    <tr>
                                         <td>Abner</td>
                                         <td>Coordenador de TI</td>
                                         <td>5037</td>
@@ -136,6 +131,24 @@
                                         <td>Assistente</td>
                                         <td>Assistente de T.I</td>
                                         <td>5041</td>
+                                    </tr>
+                                </tbody>
+                                <thead>
+                                    <tr>
+                                        <td colspan="3" style="text-align:center">
+                                            <strong>Setor Novos Negócios</strong></td>
+                                    </tr>
+                                    <tr>
+                                        <th>Colaborador</th>
+                                        <th>Função</th>
+                                        <th>Ramal</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>Carlos</td>
+                                        <td>Gestor de Novos Negócios</td>
+                                        <td>5030</td>
                                     </tr>
                                 </tbody>
                                 <thead>
